--- a/Loja-WEB/web/paginas/detalhesProduto.xhtml
+++ b/Loja-WEB/web/paginas/detalhesProduto.xhtml
@@ -35,7 +35,12 @@
                 <h:panelGrid columns="1">
                     <h:outputText value="#{managedProduto.produto.descricao}" />
                     <hr />
-                    <h:outputText value="Promoção válida até #{managedProduto.produto.dataVencimentoOferta}" />
+                    <h:panelGroup>
+                        <h:outputText value="Promoção válida até "/> 
+                        <h:outputText value="#{managedProduto.produto.dataVencimentoOferta}">
+                                      <f:convertDateTime pattern="dd/MM/yyyy" />  
+                        </h:outputText>
+                    </h:panelGroup>
                     <hr />
                     <iframe src="http://www.facebook.com/plugins/like.php?app_id=174966075894080&amp;href=#{request.requestURL}?produto=#{managedProduto.produto.id}&amp;send=false&amp;layout=standard&amp;width=450&amp;show_faces=true&amp;action=like&amp;colorscheme=light&amp;font=trebuchet+ms&amp;height=80" 
                             scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:80px;" allowTransparency="true">
@@ -44,12 +49,12 @@
                                      action="#{managedCarrinho.adicionarAoCarrinho}">
                         <f:setPropertyActionListener target="#{managedCarrinho.idProdutoSelecionado}" value="#{managedProduto.produto.id}"  />
                     </p:commandButton>
-                   </h:panelGrid>
+                </h:panelGrid>
 
 
             </h:panelGrid>
-             <iframe src="http://www.facebook.com/plugins/comments.php?href=#{request.requestURL}?produto=#{managedProduto.produto.id}" 
-                                scrolling="no" frameborder="0" style="border:none; overflow:auto; width:100%; height: 100% " allowTransparency="true"></iframe> 
+            <iframe src="http://www.facebook.com/plugins/comments.php?href=#{request.requestURL}?produto=#{managedProduto.produto.id}" 
+                    scrolling="no" frameborder="0" style="border:none; overflow:auto; width:100%; height: 100% " allowTransparency="true"></iframe> 
 
         </h:form>
     </ui:define>
