--- a/Loja-WEB/web/paginas/comun.xhtml
+++ b/Loja-WEB/web/paginas/comun.xhtml
@@ -82,8 +82,9 @@
                                     <h:link outcome="detalhesProduto.xhtml?produto=#{produto.id}">
                                         <p:graphicImage value="#{produto.imagem}" width="80px" height="80px" />         
                                     </h:link>
-                                    <p:commandButton update=":carrinho" action="#{managedCarrinho.removerDoCarrinho}" image="ui-icon ui-icon-trash" >  
-                                        <f:setPropertyActionListener value="#{produto.id}" target="#{managedProduto.idSelecionado}" /> 
+                                    <p:commandButton update=":carrinho" value="Remover" 
+                                        action="#{managedCarrinho.removerDoCarrinho}" image="ui-icon ui-icon-trash" >  
+                                        <f:setPropertyActionListener value="#{produto.id}" target="#{managedCarrinho.idProdutoSelecionado}" /> 
                                     </p:commandButton>  
                                 </h:panelGrid>  
                             </p:panel>  
