--- a/Loja-WEB/web/paginas/cadastrarProduto.xhtml
+++ b/Loja-WEB/web/paginas/cadastrarProduto.xhtml
@@ -54,7 +54,7 @@
 
                 <h:outputText value="Imagem: " />
                 <h:panelGroup id="panelUpload">
-                    <h:panelGrid columns="2" 
+                    <h:panelGrid columns="3" 
                                  title="Você pode arrastar uma imagem do seu computador e soltar sobre o botão, ou clicar no botão e escolher uma. Para substituir a imagem atual, simplesmente escolha outra. Use preferencialmente imagens nas proporções 1x1 (quadrado).">
                         <p:fileUpload fileUploadListener="#{managedProduto.handleFileUpload}"  
                                       update="panelUpload"
@@ -62,6 +62,8 @@
                                       label="Escolher imagem"
                                       multiple="false" 
                                       allowTypes="png,gif,jpg" />
+                        <p:commandButton image="ui-icon ui-icon-trash" value="Excluir imagem"
+                                             action="#{managedProduto.excluirImagemProduto}" update="panelUpload"/>
                         <h:panelGroup rendered="#{not empty managedProduto.produto.imagem}" >
                             <p:lightBox id="preimagem">
                                 <h:outputLink value="#{managedProduto.produto.imagem}" title="Imagem" >
