--- a/Loja-WEB/web/paginas/listaProdutos.xhtml
+++ b/Loja-WEB/web/paginas/listaProdutos.xhtml
@@ -44,7 +44,7 @@
                         rowsPerPageTemplate="5,10,15,20,50"> 
                 <p:column>
 
-                    <p:panel header="#{produto.nome}" style="text-align: center">
+                    <p:panel header="#{produto.nome}" style="text-align: center; width: 100%; height: 100%">
                         <h:panelGrid columns="1" style="width: 100%">
                             <p:lightBox>  
                                 <h:outputLink title="#{produto.nome}"> 
@@ -57,17 +57,18 @@
                             <h:outputText value="#{produto.descricaoLabel}" escape="false" />
                             <h:outputText value="#{produto.preco}" styleClass="preco preco_lista" />
                         </h:panelGrid>
-                        <p:commandButton image="ui-icon ui-icon-search" 
+                        <p:commandButton image="ui-icon ui-icon-search" title="Ver detalhes do produto."
                                          oncomplete="window.location = 'detalhesProduto.xhtml?produto=#{produto.id}'" />
-                        <p:commandButton image="ui-icon ui-icon-plus" update=":carrinho"
+                        <p:commandButton image="ui-icon ui-icon-plus" update=":carrinho" title="Adicionar produto ao carrinho."
                                          action="#{managedCarrinho.adicionarAoCarrinho}">
                             <f:setPropertyActionListener target="#{managedCarrinho.idProdutoSelecionado}" value="#{produto.id}"  />
                         </p:commandButton>
                         <p:commandButton image="ui-icon ui-icon-pencil" oncomplete="Loja.gotopagina(Loja.Paginas.CAD_PRODUTO);"
+                                         title="Editar produto."
                                          action="#{managedProduto.load}">
                             <f:setPropertyActionListener target="#{managedProduto.idSelecionado}" value="#{produto.id}"  />
                         </p:commandButton>
-                        <p:commandButton image="ui-icon ui-icon-trash" update="tabelaProdutos"
+                        <p:commandButton image="ui-icon ui-icon-trash" update="tabelaProdutos" title="Excluir produto."
                                          action="#{managedProduto.selecionarExcluirBuscar}">
                             <f:setPropertyActionListener target="#{managedProduto.idSelecionado}" value="#{produto.id}"  />
                         </p:commandButton>
