--- a/Loja-WEB/web/paginas/comun.xhtml
+++ b/Loja-WEB/web/paginas/comun.xhtml
@@ -13,7 +13,9 @@
         <link href="./../resources/css/cssLayout.css" rel="stylesheet" type="text/css" />
         <link href="./../resources/css/loja.css" rel="stylesheet" type="text/css" />
         <link href="./../resources/css/css3buttons.css" rel="stylesheet" type="text/css" />
-        <!--        <link href="http://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet" type="text/css" />-->
+        <link href="http://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet" type="text/css" />
+        <link href='http://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css' />
+
         <script language="text/javascript" src="./../resources/js/loja.js" type="text/javascript" />
         <!--        <script language="text/javascript" src="./../resources/js/jquery-1.6.1.min.js" type="text/javascript" /> jqueryUI da pau com ele.-->
 
@@ -83,7 +85,7 @@
                                         <p:graphicImage value="#{produto.imagem}" width="80px" height="80px" />         
                                     </h:link>
                                     <p:commandButton update=":carrinho" value="Remover" 
-                                        action="#{managedCarrinho.removerDoCarrinho}" image="ui-icon ui-icon-trash" >  
+                                                     action="#{managedCarrinho.removerDoCarrinho}" image="ui-icon ui-icon-trash" >  
                                         <f:setPropertyActionListener value="#{produto.id}" target="#{managedCarrinho.idProdutoSelecionado}" /> 
                                     </p:commandButton>  
                                 </h:panelGrid>  
