removido Prime 3.2; começando a corrigir os forms malditos;

--- a/Loja-WEB/web/paginas/detalhesProduto.xhtml
+++ b/Loja-WEB/web/paginas/detalhesProduto.xhtml
@@ -16,60 +16,60 @@
     </ui:define>
 
     <ui:define name="content">
-        <h:form id="formDetalhesProduto">
-            <f:metadata>
-                <f:viewParam name="produto" value="#{managedProduto.produto}">
-                    <f:converter converterId="produtoConverter" />
-                </f:viewParam>
-            </f:metadata>
-            <h:panelGrid columns="2">
-                <p:lightBox>  
-                    <h:outputLink title="#{managedProduto.produto.nome}"> 
-                        <p:graphicImage value="#{managedProduto.produto.imagem}" height="250px" />
-                    </h:outputLink>
-                    <f:facet name="inline">  
-                        <p:graphicImage value="#{managedProduto.produto.imagem}" height="550px" />
-                    </f:facet>  
-                </p:lightBox>
+        <f:metadata>
+            <f:viewParam name="produto" value="#{managedProduto.produto}">
+                <f:converter converterId="produtoConverter" />
+            </f:viewParam>
+        </f:metadata>
+        <h:panelGrid columns="2">
+            <p:lightBox>  
+                <h:outputLink title="#{managedProduto.produto.nome}"> 
+                    <p:graphicImage value="#{managedProduto.produto.imagem}" height="250px" />
+                </h:outputLink>
+                <f:facet name="inline">  
+                    <p:graphicImage value="#{managedProduto.produto.imagem}" height="550px" />
+                </f:facet>  
+            </p:lightBox>
 
-                <h:panelGrid columns="1">
-                    <h:outputText value="#{managedProduto.produto.descricaoLabel}" escape="false" />
-                    <hr />
+            <h:panelGrid columns="1">
+                <h:outputText value="#{managedProduto.produto.descricaoLabel}" escape="false" />
+                <hr />
+                <h:panelGroup>
+                    <h:outputText value="Promoção válida até "/> 
+                    <h:outputText value="#{managedProduto.produto.dataVencimentoOferta}" styleClass="data">
+                        <f:convertDateTime pattern="dd/MM/yyyy" />  
+                    </h:outputText>
+                </h:panelGroup>
+                <hr />
+
+                <h:panelGrid columns="2">
                     <h:panelGroup>
-                        <h:outputText value="Promoção válida até "/> 
-                        <h:outputText value="#{managedProduto.produto.dataVencimentoOferta}" styleClass="data">
-                            <f:convertDateTime pattern="dd/MM/yyyy" />  
-                        </h:outputText>
-                    </h:panelGroup>
-                    <hr />
-
-                    <h:panelGrid columns="2">
-                        <h:panelGroup>
-                            <iframe src="http://dev.syskall.com/plusone/?url=#{request.requestURL}?produto=#{managedProduto.produto.id}" 
-                                    marginheight="0" marginwidth="0" frameborder="0" scrolling="no" style="border:0;width:110px;height:30px;">
-                            </iframe>
-                            <br />
-                            <iframe allowtransparency="true" frameborder="0" scrolling="no"
-                                    src="http://platform.twitter.com/widgets/tweet_button.html"
-                                    style="width:130px; height:50px;">
-                            </iframe>
-                        </h:panelGroup>
-
-                        <iframe src="http://www.facebook.com/plugins/like.php?app_id=174966075894080&amp;href=#{request.requestURL}?produto=#{managedProduto.produto.id}&amp;send=false&amp;layout=standard&amp;width=450&amp;show_faces=true&amp;action=like&amp;colorscheme=light&amp;font=trebuchet+ms&amp;height=80" 
-                                scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:80px;" allowTransparency="true">
+                        <iframe src="http://dev.syskall.com/plusone/?url=#{request.requestURL}?produto=#{managedProduto.produto.id}" 
+                                marginheight="0" marginwidth="0" frameborder="0" scrolling="no" style="border:0;width:110px;height:30px;">
                         </iframe>
-                    </h:panelGrid>
-                    <p:commandButton image="ui-icon ui-icon-plus" update=":carrinho" value="Adicionar ao carrinho"
-                                     action="#{managedCarrinho.adicionarAoCarrinho}">
-                        <f:setPropertyActionListener target="#{managedCarrinho.idProdutoSelecionado}" value="#{managedProduto.produto.id}"  />
-                    </p:commandButton>
+                        <br />
+                        <iframe allowtransparency="true" frameborder="0" scrolling="no"
+                                src="http://platform.twitter.com/widgets/tweet_button.html"
+                                style="width:130px; height:50px;">
+                        </iframe>
+                    </h:panelGroup>
+
+                    <iframe src="http://www.facebook.com/plugins/like.php?app_id=174966075894080&amp;href=#{request.requestURL}?produto=#{managedProduto.produto.id}&amp;send=false&amp;layout=standard&amp;width=450&amp;show_faces=true&amp;action=like&amp;colorscheme=light&amp;font=trebuchet+ms&amp;height=80" 
+                            scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:80px;" allowTransparency="true">
+                    </iframe>
                 </h:panelGrid>
-
-
+                <p:commandButton image="ui-icon ui-icon-plus" 
+                                 value="Adicionar ao carrinho"
+                                 update="formLojaComum:carrinho"
+                                 action="#{managedCarrinho.adicionarAoCarrinho}" >
+                    <f:setPropertyActionListener target="#{managedCarrinho.idProdutoSelecionado}" value="#{managedProduto.produto.id}"  />
+                </p:commandButton>
             </h:panelGrid>
-            <iframe src="http://www.facebook.com/plugins/comments.php?href=#{request.requestURL}?produto=#{managedProduto.produto.id}" 
-                    scrolling="no" frameborder="0" style="border:none; overflow:auto; width:100%; height: 100% " allowTransparency="true"></iframe> 
 
-        </h:form>
+
+        </h:panelGrid>
+        <iframe src="http://www.facebook.com/plugins/comments.php?href=#{request.requestURL}?produto=#{managedProduto.produto.id}" 
+                scrolling="no" frameborder="0" style="border:none; overflow:auto; width:100%; height: 100% " allowTransparency="true"></iframe> 
+
     </ui:define>
 </ui:composition>
